# BurpSuite-rs

./: Cargo.toml  README.md
burpsuite-kit/: Cargo.toml  README.md
burpsuite-kit/demo/: Cargo.toml
burpsuite-kit/demo/src/: http_history.rs
burpsuite-kit/src/: lib.rs
burpsuite-kit/src/http_history/: item.rs  items.rs
burpsuite-kit/tests/http_history_files/: burpsuite_community_v1.7.36.xml
demos/http_history/: Cargo.toml
demos/http_history/src/: main.rs
src/http_history/: item.rs  items.rs
tests/http_history_files/: README.md  burpsuite_community_v2020.12.1.xml  burpsuite_community_v2021.3.2.xml
