[package]
name = "burpsuite-kit"
version = "0.1.1"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"
description = "Burp Suite kit"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/burpsuite-kit"
homepage = "https://github.com/bk-rs/burpsuite-kit"
documentation = "https://docs.rs/burpsuite-kit"
keywords = []
categories = []
readme = "README.md"

[dependencies]
quick-xml = { version = "0.20", default-features = false, features = [] }
http = { version = "0.2", default-features = false, features = [] }
chrono = { version = "0.4", default-features = false, features = [] }
once_cell = { version = "1.5", default-features = false, features = ["std"] }
strum = { version = "0.20", default-features = false, features = ["derive"] }

[workspace]
members = [
    "demos/http_history",
]
