[package]
name = "burpsuite-kit"
version = "0.2.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Burp Suite kit"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/BurpSuite-rs"
homepage = "https://github.com/bk-rs/BurpSuite-rs"
documentation = "https://docs.rs/burpsuite-kit"
keywords = []
categories = []
readme = "README.md"

[dependencies]
quick-xml = { version = "^0.23", default-features = false }
http = { version = "0.2", default-features = false }
chrono = { version = "0.4", default-features = false }
once_cell = { version = "1", default-features = false, features = ["std"] }
strum = { version = "0.24", default-features = false, features = ["std", "derive"] }
thiserror = { version = "1", default-features = false }
