[package]
name = "burpsuite-kit-demo"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"

[[bin]]
name = "burpsuite_kit_http_history"
path = "src/http_history.rs"

[dependencies]
burpsuite-kit = { path = "..", version = "^0.1" }
base64 = "0.13"
http1-spec = "0.2"
serde_json = "1.0"

pretty_env_logger = "0.4"
log = "0.4"
